--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run cleanBuild && webpack --progress --color --display-error-details && npm run copyStaticFiles",
     "dev": "npm run cleanBuild && npm run copyStaticFiles && webpack --watch",
     "watchDebug": "webpack --progress --color --watch --display-error-details",
-    "copyStaticFiles": "cp src/index.html public/",
+    "copyStaticFiles": "cp -R src/img/ public/ && cp src/index.html public/",
     "cleanBuild": "rm -rf public/*"
   },
   "author": "",
@@ -20,17 +20,19 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
+    "file-loader": "0.11.2",
     "jest": "^20.0.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9"
+    "url-loader": "0.5.9"
   },
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "moment": "2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
