--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "classnames": "2.2.5",
     "moment": "2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
