--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-nauka",
+  "name": "react-training",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,10 +21,6 @@
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
     "file-loader": "0.11.2",
-    "jest": "^20.0.4",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.4",
-    "style-loader": "^0.18.2",
     "url-loader": "0.5.9"
   },
   "dependencies": {
