--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
     "file-loader": "0.11.2",
+    "underscore": "^1.8.3",
     "url-loader": "0.5.9"
   },
   "dependencies": {
