--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url-loader": "0.5.9"
   },
   "dependencies": {
+    "autolinker": "^1.4.3",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
@@ -30,7 +31,9 @@
     "moment": "2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
+    "remarkable": "^1.7.1",
     "webpack": "^3.0.0"
   }
 }
